[project]
name = "pgtestdbpy"
version = "0.0.1"
description = "pgtestdb Python clone"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["postgres", "testing"]
authors = [
  {name = "Oliver Russell", email = "ojhrussell@gmail.com"},
]
maintainers = [
  {name = "Oliver Russell", email = "ojhrussell@gmail.com"},
]
classifiers = [
  "Programming Language :: Python",
]

dependencies = [
  "psycopg>=3.1.0",
  # "psycopg-binary>=3.1.0", - Python version is quick enough for our purposes
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "mypy>=1.6.0",
]

[project.urls]
homepage = "https://github.com/leontrolski/pgtestdbpy"
documentation = "https://github.com/leontrolski/pgtestdbpy"
repository = "https://github.com/leontrolski/pgtestdbpy.git"
